cabal-version:      2.4
name:               verse
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

author: Andy Sonnenburg

maintainer: andy.sonnenburg@epicgames.com

library
  exposed-modules:
    Control.Monad.Ref
    Control.Monad.Ref.Backtrack
    Control.Monad.Ref.Lenient
    Control.Monad.Ref.Logic
    Control.Monad.RST
    Control.Monad.Stuck
    Control.Monad.Supply
    Control.Monad.Trans.Verse
    Control.Monad.Unify
    Control.Monad.Var
    Control.Monad.Verse
    Control.Monad.Verse.Class
    Data.Fix
    Data.Ref
    Data.Tagged
    Data.Unifiable
    Language.Verse
    Language.Verse.Desugar
    Language.Verse.Desugar.Exp
    Language.Verse.Error
    Language.Verse.Eval
    Language.Verse.Ident
    Language.Verse.Indent
    Language.Verse.Intrinsic
    Language.Verse.Label
    Language.Verse.Lexer
    Language.Verse.Loc
    Language.Verse.Name
    Language.Verse.Overload
    Language.Verse.Parse
    Language.Verse.Parse.Exp
    Language.Verse.Pos
    Language.Verse.Token
    Language.Verse.Val
  build-tool-depends:
  build-depends:
    base >= 4.16.0.0,
    array,
    bytestring,
    comonad,
    containers,
    hashable,
    logict,
    mtl >= 2.3.1,
    prettyprinter,
    semigroupoids,
    text,
    transformers,
    unordered-containers >= 0.2.6.0
  hs-source-dirs: src
  ghc-options: -Wall -Wno-name-shadowing
  default-language: Haskell2010

test-suite verse-test-suite
  type: exitcode-stdio-1.0
  main-is: TestSuite.hs
  build-depends:
    base >= 4.16.0.0,
    bytestring,
    directory,
    filepath,
    HUnit,
    prettyprinter,
    transformers,
    verse
  hs-source-dirs: test
  ghc-options: -Wall -Wno-name-shadowing
  default-language: Haskell2010

executable versei
  main-is: Main.hs
  build-depends:
    base >= 4.16.0.0,
    bytestring,
    prettyprinter,
    transformers,
    verse
  hs-source-dirs: main
  ghc-options: -Wall -Wno-name-shadowing
  default-language: Haskell2010

executable verse.wasm
  main-is: Main.hs
  build-depends:
    base >= 4.16.0.0,
    bytestring,
    prettyprinter,
    transformers,
    verse
  hs-source-dirs: wasm
  ghc-options: -Wall
  default-language: Haskell2010

executable verselex
  main-is: Main.hs
  build-depends:
    base >= 4.16.0.0,
    bytestring,
    comonad,
    prettyprinter,
    transformers,
    verse
  hs-source-dirs: lex
  ghc-options: -Wall
  default-language: Haskell2010
