cabal-version:      2.4
name:               verse
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

author: Andy Sonnenburg

maintainer: andy.sonnenburg@epicgames.com

flag wasm
  manual: True
  default: False

library
  exposed-modules:
    Control.Monad.Abort
    Control.Monad.Ref
    Control.Monad.RS
    Control.Monad.Supply
    Control.Monad.Verse
    Data.IntMap.Lazy.Extras
    Data.Fix
    Data.Functor.Compose.Instances
    Language.Verse
    Language.Verse.Desugar
    Language.Verse.Desugar.Exp
    Language.Verse.Effect.Split
    Language.Verse.Error
    Language.Verse.Eval
    Language.Verse.Ident
    Language.Verse.Indent
    Language.Verse.Intrinsic
    Language.Verse.Label
    Language.Verse.Lexer
    Language.Verse.Loc
    Language.Verse.Mode
    Language.Verse.Name
    Language.Verse.Parse
    Language.Verse.Parse2
    Language.Verse.Parse.Exp
    Language.Verse.Pos
    Language.Verse.Rewrite
    Language.Verse.Rewrite.Exp
    Language.Verse.Token
    Language.Verse.Val
  build-tool-depends:
    alex:alex,
    happy:happy
  build-depends:
    base >= 4.16.0.0,
    array,
    bytestring,
    comonad,
    containers,
    hashable,
    mtl >= 2.3.1,
    prettyprinter,
    semigroupoids,
    text,
    transformers,
    unordered-containers >= 0.2.6.0,
    parsec >= 3.1.16.1
  hs-source-dirs: src
  ghc-options: -Wall -Wno-name-shadowing
  if !flag(wasm)
    ghc-options: -Werror
  default-language: GHC2021

test-suite golden-files
  type: exitcode-stdio-1.0
  main-is: Golden.hs
  build-depends:
    base >= 4.16.0.0,
    bytestring,
    directory,
    filepath,
    HUnit,
    prettyprinter,
    transformers,
    verse
  hs-source-dirs: test
  if flag(wasm)
    buildable: False
  ghc-options: -Wall -Wno-name-shadowing -Werror
  default-language: GHC2021

test-suite hunit
  type: exitcode-stdio-1.0
  main-is: HUnit.hs
  build-depends:
    base >= 4.16.0.0,
    HUnit,
    verse
  hs-source-dirs: test
  if flag(wasm)
    buildable: False
  ghc-options: -Wall -Wno-name-shadowing -Werror
  default-language: GHC2021

executable versei
  main-is: Main.hs
  build-depends:
    base >= 4.16.0.0,
    bytestring,
    prettyprinter,
    transformers,
    verse
  hs-source-dirs: main
  if flag(wasm)
    buildable: False
  ghc-options: -Wall -Wno-name-shadowing -Werror
  default-language: GHC2021

executable versewasm
  main-is: Main.hs
  c-sources: wasm/init.c
  build-depends:
    base >= 4.16.0.0,
    bytestring,
    prettyprinter,
    text,
    transformers,
    verse
  hs-source-dirs: wasm
  if !flag(wasm)
    buildable: False
  ghc-options:
    -Wall -Wno-name-shadowing -Werror
    -no-hs-main -optl-mexec-model=reactor
    "-optl-Wl,--export=malloc,--export=calloc_ptr,--export=free,--export=verse_eval"
  default-language: GHC2021

executable verselex
  main-is: Main.hs
  build-depends:
    base >= 4.16.0.0,
    bytestring,
    comonad,
    prettyprinter,
    transformers,
    verse
  hs-source-dirs: lex
  if flag(wasm)
    buildable: False
  ghc-options: -Wall -Wno-name-shadowing -Werror
  default-language: GHC2021

executable verseparse
  main-is: Main.hs
  build-depends:
    base >= 4.16.0.0,
    bytestring,
    directory,
    filepath,
    comonad,
    prettyprinter,
    transformers,
    verse
  hs-source-dirs: parse
  if flag(wasm)
    buildable: False
  ghc-options: -Wall -Werror
  default-language: GHC2021
