cabal-version:      2.4
name:               ebnf
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Lennart Augustsson
maintainer:         lennart.augustsson@epicgames.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

executable ebnf
    main-is:          Main.hs

    other-modules:    ParseEBNF
                      ParseVerse
                      ParserComb
                      AST

    ghc-options:      -Wall -O2
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base,
                      mtl,
                      megaparsec,
                      containers,
                      uniplate,
                      pretty,
    hs-source-dirs:   src
    default-language: Haskell2010
