cabal-version:      2.4
name:               epicgames
version:            0.1.0.0
synopsis:           epic untilities
-- description:
-- bug-reports:
-- license:
-- author:
-- maintainer:
-- copyright:
-- category:
extra-source-files: CHANGELOG.md
build-type:         Simple

library
    exposed-modules:
        Epic.Applicative
        Epic.Lens
        Epic.Print
        Epic.OpParser
        Epic.ShowRational
        Epic.SIntMap
        Epic.SIntSet
        Epic.Uniplate

    build-depends:
        base,
        mtl,
        uniplate,
        pretty,
        lens,
        containers,
        text,

    hs-source-dirs:   src
    default-language: Haskell2010
