cabal-version:      3.0
name:               VerseCon
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             Andy Sonnenburg
maintainer:         andy.sonnenburg@epicgames.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Wno-name-shadowing

library
    import:           warnings
    exposed-modules:
        Match
        Ref
        Supply
        Verse1
        Verse2
        Verse3
        Verse4
        Verse5
        Verse6
    other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.0.0,
        containers,
        mtl,
        transformers
    hs-source-dirs:   src
    default-language: GHC2021

test-suite VerseCon-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.0.0,
        VerseCon
